parser/src/y.output

state 0
	$accept: .top $end 

	'+'  shift 4
	'-'  shift 5
	'('  shift 9
	NODE  shift 8
	.  error

	expr  goto 2
	expr1  goto 3
	expr2  goto 6
	expr3  goto 7
	top  goto 1

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  expr.    (1)

	.  reduce 1 (src line 38)


state 3
	expr:  expr1.    (2)
	expr1:  expr1.'+' expr2 
	expr1:  expr1.'-' expr2 

	'+'  shift 10
	'-'  shift 11
	.  reduce 2 (src line 45)


state 4
	expr:  '+'.expr 

	'+'  shift 4
	'-'  shift 5
	'('  shift 9
	NODE  shift 8
	.  error

	expr  goto 12
	expr1  goto 3
	expr2  goto 6
	expr3  goto 7

state 5
	expr:  '-'.expr 

	'+'  shift 4
	'-'  shift 5
	'('  shift 9
	NODE  shift 8
	.  error

	expr  goto 13
	expr1  goto 3
	expr2  goto 6
	expr3  goto 7

state 6
	expr1:  expr2.    (5)
	expr2:  expr2.'·' expr3 
	expr2:  expr2.'*' expr3 
	expr2:  expr2.'/' expr3 

	'·'  shift 14
	'*'  shift 15
	'/'  shift 16
	.  reduce 5 (src line 56)


state 7
	expr2:  expr3.    (8)

	.  reduce 8 (src line 67)


state 8
	expr3:  NODE.    (12)

	.  reduce 12 (src line 82)


state 9
	expr3:  '('.expr ')' 

	'+'  shift 4
	'-'  shift 5
	'('  shift 9
	NODE  shift 8
	.  error

	expr  goto 17
	expr1  goto 3
	expr2  goto 6
	expr3  goto 7

state 10
	expr1:  expr1 '+'.expr2 

	'('  shift 9
	NODE  shift 8
	.  error

	expr2  goto 18
	expr3  goto 7

state 11
	expr1:  expr1 '-'.expr2 

	'('  shift 9
	NODE  shift 8
	.  error

	expr2  goto 19
	expr3  goto 7

state 12
	expr:  '+' expr.    (3)

	.  reduce 3 (src line 47)


state 13
	expr:  '-' expr.    (4)

	.  reduce 4 (src line 51)


state 14
	expr2:  expr2 '·'.expr3 

	'('  shift 9
	NODE  shift 8
	.  error

	expr3  goto 20

state 15
	expr2:  expr2 '*'.expr3 

	'('  shift 9
	NODE  shift 8
	.  error

	expr3  goto 21

state 16
	expr2:  expr2 '/'.expr3 

	'('  shift 9
	NODE  shift 8
	.  error

	expr3  goto 22

state 17
	expr3:  '(' expr.')' 

	')'  shift 23
	.  error


state 18
	expr1:  expr1 '+' expr2.    (6)
	expr2:  expr2.'·' expr3 
	expr2:  expr2.'*' expr3 
	expr2:  expr2.'/' expr3 

	'·'  shift 14
	'*'  shift 15
	'/'  shift 16
	.  reduce 6 (src line 58)


state 19
	expr1:  expr1 '-' expr2.    (7)
	expr2:  expr2.'·' expr3 
	expr2:  expr2.'*' expr3 
	expr2:  expr2.'/' expr3 

	'·'  shift 14
	'*'  shift 15
	'/'  shift 16
	.  reduce 7 (src line 62)


state 20
	expr2:  expr2 '·' expr3.    (9)

	.  reduce 9 (src line 69)


state 21
	expr2:  expr2 '*' expr3.    (10)

	.  reduce 10 (src line 73)


state 22
	expr2:  expr2 '/' expr3.    (11)

	.  reduce 11 (src line 77)


state 23
	expr3:  '(' expr ')'.    (13)

	.  reduce 13 (src line 84)


11 terminals, 6 nonterminals
14 grammar rules, 24/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
55 working sets used
memory: parser 23/120000
21 extra closures
38 shift entries, 1 exceptions
13 goto entries
11 entries saved by goto default
Optimizer space used: output 29/120000
29 table entries, 4 zero
maximum spread: 11, maximum offset: 16
